dev-ops/exam/kubernetes/v2/exam-service-v2.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: exam-v2
  name: exam-v2
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: exam-v2
  type: ClusterIP
